--- a/presentation.html
+++ b/presentation.html
@@ -2,114 +2,105 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PoIP Presentation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PoIP | Presentation</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
+      background: #f0f2f5;
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f8f9fc;
-      color: #333;
+      padding: 0;
     }
-    header {
-      background-color: #1a1a2e;
+    .header {
+      background: #1a1a2e;
       color: white;
-      padding: 60px 20px;
+      padding: 50px 20px;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.8em;
+    .header h1 {
       margin: 0;
+      font-size: 2.5em;
     }
-    header p {
-      font-size: 1.2em;
+    .header p {
       margin-top: 10px;
+      font-size: 1.2em;
     }
     .container {
-      max-width: 1000px;
-      margin: auto;
       padding: 30px 20px;
+      max-width: 900px;
+      margin: auto;
     }
     .section {
       background: white;
-      border-radius: 12px;
-      padding: 30px;
-      margin-bottom: 25px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+      border-radius: 10px;
+      padding: 25px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     }
     .section h2 {
       margin-top: 0;
-      color: #1a1a2e;
     }
     .buttons {
       text-align: center;
-      margin-top: 40px;
+      margin-top: 30px;
     }
     .buttons a {
       display: inline-block;
       margin: 10px;
-      padding: 12px 30px;
-      background-color: #1a1a2e;
+      padding: 12px 25px;
+      background: #1a1a2e;
       color: white;
       text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
+      border-radius: 6px;
       transition: background 0.3s ease;
     }
     .buttons a:hover {
-      background-color: #16213e;
+      background: #16213e;
     }
     footer {
       text-align: center;
       font-size: 0.9em;
-      padding: 30px 20px;
       color: #888;
+      padding: 20px;
     }
   </style>
 </head>
 <body>
 
-<header>
+<div class="header">
   <h1>Proof of Impact Protocol</h1>
-  <p>Staking-Driven Treasury for Real-World Change</p>
-</header>
+  <p>Decentralized funding for real-world impact</p>
+</div>
 
 <div class="container">
+  <div class="section">
+    <h2>Overview</h2>
+    <p>The Proof of Impact Protocol (PoIP) is a blockchain-based system that allows users to stake tokens to grow a community treasury. This treasury funds verified impact projects in aid, innovation, and environmental recovery — transparently, on-chain.</p>
+  </div>
 
   <div class="section">
-    <h2>Live Features</h2>
+    <h2>Core Features</h2>
     <ul>
-      <li>✅ Stake $POI to grow the treasury</li>
-      <li>✅ Track the real-time treasury balance</li>
-      <li>✅ View symbolic $GROW rewards</li>
-      <li>✅ AI-assisted bounty selection</li>
-      <li>✅ Transparent smart contract deployment</li>
+      <li>✔️ Stake $POI to grow the treasury</li>
+      <li>✔️ Earn symbolic $GROW tokens for staking</li>
+      <li>✔️ Impact bounties funded from yield only</li>
+      <li>✔️ Fully decentralized, DAO-governed system</li>
     </ul>
   </div>
 
   <div class="section">
-    <h2>Live Demos</h2>
+    <h2>Explore</h2>
     <div class="buttons">
-      <a href="stake.html">Stake</a>
-      <a href="treasury-live.html">Treasury</a>
-      <a href="grow.html">Reward</a>
-      <a href="bounty-fund.html">NGO Logic</a>
-      <a href="proof-impact.html">Proof</a>
+      <a href="stake.html">Stake Now</a>
+      <a href="grow.html">Check $GROW</a>
+      <a href="treasury-live.html">View Treasury</a>
+      <a href="proof.html">Impact Proof</a>
     </div>
   </div>
-
-  <div class="section">
-    <h2>Whitepaper</h2>
-    <p>Access the latest protocol whitepaper outlining PoIP’s vision, DAO structure, treasury logic, staking incentives, and long-term plan.</p>
-    <div class="buttons">
-      <a href="https://docs.google.com/document/d/1SmkA1FAfP7GJkLuN_aHICzCmODVwEnWTuQzCP5KIt9c/edit">Open Whitepaper</a>
-    </div>
-  </div>
-
 </div>
 
 <footer>
-  &copy; 2025 Proof of Impact Protocol — All Rights Reserved
+  &copy; 2025 Proof of Impact Protocol. Built on transparency.
 </footer>
 
 </body>
