--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       <a href="presentation.html">View Summary</a>
       <a href="grow.html">$GROW Balance</a>
       <a href="proof.html">View Impact Proof</a>
+      <a href="impact-queue.html">Impact Queue</a> <!-- New Button -->
     </div>
   </div>
 
