--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
       margin-top: 12px;
       font-size: 1.3em;
     }
+    .version-tag {
+      font-size: 0.9em;
+      background-color: #333;
+      color: #fff;
+      display: inline-block;
+      padding: 6px 12px;
+      border-radius: 6px;
+      margin-top: 10px;
+    }
     .container {
       padding: 40px 20px;
       max-width: 1100px;
@@ -80,6 +89,25 @@
       padding: 30px 20px;
       color: #888;
     }
+    .disclaimer {
+      margin-top: 20px;
+      font-size: 0.85em;
+      color: #999;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .contract-links {
+      margin-top: 15px;
+      font-size: 0.9em;
+      color: #555;
+      text-align: center;
+    }
+    .contract-links a {
+      color: #1a1a2e;
+      text-decoration: underline;
+      margin: 0 10px;
+    }
   </style>
 </head>
 <body>
@@ -87,6 +115,7 @@
 <header>
   <h1>Proof of Impact Protocol</h1>
   <p>Stake. Fund Real Impact. Earn Symbolic Rewards.</p>
+  <div class="version-tag">v1.0 – Pre-Funding Model</div>
 </header>
 
 <div class="container">
@@ -122,7 +151,6 @@
       <a href="presentation.html">View Summary</a>
       <a href="grow.html">$GROW Balance</a>
       <a href="proof.html">View Impact Proof</a>
-      <a href="impact-queue.html">Impact Queue</a> <!-- New Button -->
     </div>
   </div>
 
@@ -144,10 +172,24 @@
     </p>
   </div>
 
+  <div class="contract-links">
+    <strong>DAO:</strong>
+    <a href="https://polygonscan.com/address/0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6" target="_blank">
+      View Contract
+    </a> | 
+    <strong>Treasury:</strong>
+    <a href="https://polygonscan.com/address/0x30f693555e4a1eb8e76322079b11E12ee439bcC1" target="_blank">
+      View Contract
+    </a>
+  </div>
+
 </div>
 
 <footer>
   &copy; 2025 Proof of Impact Protocol. Built for global good.
+  <div class="disclaimer">
+    This is a simulation of the Proof of Impact Protocol in its pre-funding model. No real funds are currently staked, and no financial return is promised. All interactions are symbolic and designed to demonstrate the functionality of the protocol. Do your own research before participating in any real deployment.
+  </div>
 </footer>
 
 </body>
