--- a/index.html
+++ b/index.html
@@ -25,15 +25,6 @@
       margin-top: 12px;
       font-size: 1.3em;
     }
-    .version-tag {
-      font-size: 0.9em;
-      background-color: #333;
-      color: #fff;
-      display: inline-block;
-      padding: 6px 12px;
-      border-radius: 6px;
-      margin-top: 10px;
-    }
     .container {
       padding: 40px 20px;
       max-width: 1100px;
@@ -89,25 +80,6 @@
       padding: 30px 20px;
       color: #888;
     }
-    .disclaimer {
-      margin-top: 20px;
-      font-size: 0.85em;
-      color: #999;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .contract-links {
-      margin-top: 15px;
-      font-size: 0.9em;
-      color: #555;
-      text-align: center;
-    }
-    .contract-links a {
-      color: #1a1a2e;
-      text-decoration: underline;
-      margin: 0 10px;
-    }
   </style>
 </head>
 <body>
@@ -115,7 +87,6 @@
 <header>
   <h1>Proof of Impact Protocol</h1>
   <p>Stake. Fund Real Impact. Earn Symbolic Rewards.</p>
-  <div class="version-tag">v1.0 – Pre-Funding Model</div>
 </header>
 
 <div class="container">
@@ -155,6 +126,16 @@
   </div>
 
   <div class="section">
+    <h2>Live Contract Addresses</h2>
+    <div class="buttons">
+      <a href="https://polygonscan.com/address/0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6" target="_blank">View DAO Contract</a>
+      <a href="https://polygonscan.com/address/0x30f693555e4a1eb8e76322079b11E12ee439bcC1" target="_blank">View Treasury Vault</a>
+      <a href="https://polygonscan.com/address/0xba0E9625B37C2F52678D096Ad2c33B940FF6C921" target="_blank">View $POI Token</a>
+      <a href="https://polygonscan.com/address/0x975D8d9D9c62416662d9c01A197522102aADDf20" target="_blank">View $GROW Token</a>
+    </div>
+  </div>
+
+  <div class="section">
     <h2>Why PoIP Matters</h2>
     <p>This is more than a protocol — it's a movement. Join a global system that verifies where funds go, how they’re used, and lets you contribute directly to real-world change through a transparent, smart-contract-controlled treasury.</p>
   </div>
@@ -172,24 +153,10 @@
     </p>
   </div>
 
-  <div class="contract-links">
-    <strong>DAO:</strong>
-    <a href="https://polygonscan.com/address/0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6" target="_blank">
-      View Contract
-    </a> | 
-    <strong>Treasury:</strong>
-    <a href="https://polygonscan.com/address/0x30f693555e4a1eb8e76322079b11E12ee439bcC1" target="_blank">
-      View Contract
-    </a>
-  </div>
-
 </div>
 
 <footer>
   &copy; 2025 Proof of Impact Protocol. Built for global good.
-  <div class="disclaimer">
-    This is a simulation of the Proof of Impact Protocol in its pre-funding model. No real funds are currently staked, and no financial return is promised. All interactions are symbolic and designed to demonstrate the functionality of the protocol. Do your own research before participating in any real deployment.
-  </div>
 </footer>
 
 </body>
