--- a/index.html
+++ b/index.html
@@ -2,123 +2,105 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Proof of Impact Protocol</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f5f7fb;
       margin: 0;
       padding: 0;
-      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f4f6fa;
+      color: #2c3e50;
+      text-align: center;
     }
+
     header {
-      background-color: #111;
-      color: #fff;
-      padding: 40px 20px;
-      text-align: center;
+      background: #111;
+      padding: 30px 0;
     }
+
     header h1 {
-      margin: 0;
-      font-size: 32px;
-    }
-    header p {
-      margin-top: 10px;
-      font-size: 16px;
-      opacity: 0.9;
-    }
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-    .button-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-bottom: 40px;
-    }
-    .button {
-      background-color: #0077cc;
       color: #fff;
-      padding: 14px;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: background 0.3s ease;
+      font-size: 32px;
+      margin: 0;
+      letter-spacing: 1px;
     }
-    .button:hover {
-      background-color: #005fa3;
+
+    .container {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
     }
-    .info {
-      background-color: #fff;
-      border-radius: 10px;
-      padding: 25px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-      margin-bottom: 40px;
-    }
-    .info h2 {
-      margin-top: 0;
+
+    h2 {
+      font-size: 24px;
+      margin-top: 40px;
       color: #2c3e50;
     }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #f0f0f0;
-      font-size: 14px;
+
+    .button-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
     }
-    footer a {
-      color: #0077cc;
+
+    .btn {
+      background: #007bff;
+      color: white;
+      text-decoration: none;
+      padding: 14px 24px;
+      border-radius: 8px;
+      font-size: 16px;
+      transition: background 0.3s, transform 0.2s;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .btn:hover {
+      background: #0056b3;
+      transform: scale(1.05);
+    }
+
+    footer {
+      margin-top: 60px;
+      font-size: 14px;
+      color: #999;
+      padding-bottom: 40px;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Proof of Impact Protocol (PoIP)</h1>
-  <p>Trustless infrastructure for funding humanitarian, climate, and innovation bounties</p>
-</header>
+  <header>
+    <h1>Proof of Impact Protocol (PoIP)</h1>
+  </header>
 
-<div class="container">
+  <div class="container">
+    <h2>Live Interface</h2>
+    <div class="button-grid">
+      <a class="btn" href="presentation.html">Overview & Pitch</a>
+      <a class="btn" href="stake.html">Staking Interface</a>
+      <a class="btn" href="grow.html">$GROW Rewards</a>
+      <a class="btn" href="treasury-live.html">Live Treasury View</a>
+      <a class="btn" href="bounty-fund.html">Bounty Funding</a>
+    </div>
 
-  <div class="button-grid">
-    <a href="stake.html" class="button">Stake $POI – Earn $GROW</a>
-    <a href="grow.html" class="button">Use $GROW – Impact Voting</a>
-    <a href="treasury-live.html" class="button">Live Treasury Balance</a>
-    <a href="presentation.html" class="button">PoIP Overview & Pitch</a>
-    <a href="whitepaper.html" class="button">Read the Whitepaper</a>
-    <a href="foundation.html" class="button">The Foundation</a>
+    <h2>Documentation</h2>
+    <div class="button-grid">
+      <a class="btn" href="whitepaper.html">Whitepaper v2.8</a>
+      <a class="btn" href="foundation.html">The Foundation</a>
+    </div>
+
+    <h2>Verification Examples</h2>
+    <div class="button-grid">
+      <a class="btn" href="proof-003.html">Proof Example</a>
+    </div>
   </div>
 
-  <div class="info">
-    <h2>What is PoIP?</h2>
-    <p>The Proof of Impact Protocol (PoIP) is an autonomous, non-profit blockchain system that funds verifiable global impact using treasury yield, not speculation or donations. It uses:</p>
-    <ul>
-      <li>A low-risk DeFi treasury with transparent yield strategy</li>
-      <li>$POI staking to bootstrap reserves and enable participation</li>
-      <li>$GROW as a symbolic, non-tradable reward token with a dedicated voting page</li>
-      <li>On-chain bounty funding with AI-flagged proof verification</li>
-      <li>No DAO, no profit motive, and no custodial human control</li>
-    </ul>
-    <p>The system is designed to last decades — immune to failure, speculation, and governance risk. It’s regenerative by default, and mathematically governed from day one.</p>
-  </div>
-
-  <div class="info">
-    <h2>Token & Contract Addresses</h2>
-    <ul>
-      <li><strong>$POI Token:</strong> 0xba0E9625B37C2F52678D096Ad2c33B940FF6C921</li>
-      <li><strong>$GROW Token:</strong> 0x975D8d9D9c62416662d9c01A197522102aADDf20</li>
-      <li><strong>Treasury Vault:</strong> 0x30f693555e4a1eb8e76322079b11E12ee439bcC1</li>
-      <li><strong>Staking Contract:</strong> 0x603608E09b9F4AAFd50500003A59E1F9c98E4653</li>
-    </ul>
-  </div>
-
-</div>
-
-<footer>
-  Proof of Impact Protocol (PoIP) – v2.8, June 2025 | Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU GPL v3.0</a>
-</footer>
+  <footer>
+    &copy; 2025 Proof of Impact Protocol. All rights reserved.
+  </footer>
 
 </body>
 </html>
