--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <a href="presentation.html">View Summary</a>
         <a href="grow.html">$GROW Balance</a>
         <a href="impact.html">View Impact Proof</a>
+        <a href="view-bounties.html">View Bounties</a> <!-- ✅ NEW BUTTON ADDED -->
       </div>
     </div>
   </div>
@@ -144,10 +145,10 @@
 
   <div class="section">
     <div class="card">
-      <h2>The PoIP Foundation</h2>
-      <p>The Proof of Impact Foundation is a UK-registered nonprofit that supports the growth and adoption of the PoIP protocol. It plays a coordination role — helping onboard NGOs, securing grant support, and managing public infrastructure like the website and documentation.</p>
-      <p>Importantly, the Foundation holds no $POI or $GROW tokens, cannot access treasury funds, and does not control protocol execution. All on-chain logic is fully decentralized and managed by smart contracts.</p>
-      <p>As the protocol becomes fully autonomous, the Foundation will phase into an advisory role — supporting AI infrastructure and transparency without interfering in execution.</p>
+      <h2>The PoIP Collective</h2>
+      <p>The Proof of Impact Collective is a UK-registered nonprofit that supports the growth and adoption of the PoIP protocol. It plays a coordination role — helping onboard NGOs, securing grant support, and managing public infrastructure like the website and documentation.</p>
+      <p>Importantly, the Collective holds no $POI or $GROW tokens, cannot access treasury funds, and does not control protocol execution. All on-chain logic is fully decentralized and managed by smart contracts.</p>
+      <p>As the protocol becomes fully autonomous, the Collective will phase into an advisory role — supporting AI infrastructure and transparency without interfering in execution.</p>
     </div>
   </div>
 
